forth/test/fail/test_discard_assign_read.af
\ Must fail to compile.
fun: .test_discard_assign_read_fail { -- out } 10 { _val } _val end
